--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,3 +19,9 @@ BBFILE_PRIORITY_xilinx-zynqmp = "7"
 LAYERVERSION_xilinx-zynqmp = "1"
 
 LAYERDEPENDS_xilinx-zynqmp = "core wr-kernel"
+
+# We have a pre-populated downloads directory, add to PREMIRRORS
+PREMIRRORS_append = " \
+     .*://.*/.* file://${LAYERDIR}/downloads/ \n \
+     git://.*/.* git://${LAYERDIR}/git/MIRRORNAME;protocol=file \n \
+"
