--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,27 +1,31 @@
 #
-# Copyright (C) 2016 Wind River Systems, Inc.
+# Copyright (C) 2018 Wind River Systems, Inc.
 #
-BBPATH ?= ""
+
 # We have a conf and classes directory, add to BBPATH
-BBPATH := "${LAYERDIR}:${BBPATH}"
+BBPATH =. "${LAYERDIR}:"
 
 # We have a packages directory, add to BBFILES
-BBFILES := "${BBFILES} ${LAYERDIR}/recipes-*/*/*.bb \
- 	${LAYERDIR}/recipes-*/*/*.bbappend \
- 	${LAYERDIR}/classes/*.bbclass"
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
+	${LAYERDIR}/recipes-*/*/*.bbappend"
+
 
 BBFILE_COLLECTIONS += "xilinx-zynqmp"
 BBFILE_PATTERN_xilinx-zynqmp := "^${LAYERDIR}/"
 BBFILE_PRIORITY_xilinx-zynqmp = "7"
 
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
+
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_xilinx-zynqmp = "1"
 
-LAYERDEPENDS_xilinx-zynqmp = "core wr-kernel"
+LAYERDEPENDS_xilinx-zynqmp = "core wrlinux"
 
 # We have a pre-populated downloads directory, add to PREMIRRORS
 PREMIRRORS_append = " \
-     .*://.*/.* file://${LAYERDIR}/downloads/ \n \
-     git://.*/.* git://${LAYERDIR}/git/MIRRORNAME;protocol=file \n \
-"
+	git://.*/.* file://${LAYERDIR}/downloads/ \n \
+	svn://.*/.* file://${LAYERDIR}/downloads/ \n \
+	ftp://.*/.* file://${LAYERDIR}/downloads/ \n \
+	http://.*/.* file://${LAYERDIR}/downloads/ \n \
+	https://.*/.* file://${LAYERDIR}/downloads/ \n"
