--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,22 +10,20 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
 
-BBFILE_COLLECTIONS += "xilinx-zynqmp"
-BBFILE_PATTERN_xilinx-zynqmp := "^${LAYERDIR}/"
-BBFILE_PRIORITY_xilinx-zynqmp = "7"
+BBFILE_COLLECTIONS += "wr-xilinx-zynqmp"
+BBFILE_PATTERN_wr-xilinx-zynqmp := "^${LAYERDIR}/"
+BBFILE_PRIORITY_wr-xilinx-zynqmp = "7"
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
-LAYERVERSION_xilinx-zynqmp = "1"
+LAYERVERSION_wr-xilinx-zynqmp = "1"
 
-LAYERDEPENDS_xilinx-zynqmp = "core wrlinux"
+LAYERDEPENDS_wr-xilinx-zynqmp = "core wrlinux"
 
 # We have a pre-populated downloads directory, add to PREMIRRORS
 PREMIRRORS_append = " \
-	git://.*/.* file://${LAYERDIR}/downloads/ \n \
-	svn://.*/.* file://${LAYERDIR}/downloads/ \n \
-	ftp://.*/.* file://${LAYERDIR}/downloads/ \n \
-	http://.*/.* file://${LAYERDIR}/downloads/ \n \
-	https://.*/.* file://${LAYERDIR}/downloads/ \n"
+     .*://.*/.* file://${LAYERDIR}/downloads/ \n \
+     git://.*/.* git://${LAYERDIR}/git/MIRRORNAME;protocol=file \n \
+"
