--- a/recipes-graphics/xorg-xserver/xserver-xf86-config/xilinx-zynqmp/xorg.conf
+++ b/recipes-graphics/xorg-xserver/xserver-xf86-config/xilinx-zynqmp/xorg.conf
@@ -1,13 +1,13 @@
 Section "InputDevice"
-	Identifier	"System Mouse"
-	Driver		"mouse"
-	Option		"Device" "/dev/input/mouse0"
-EndSection
-
-Section "InputDevice"
 	Identifier	"System Keyboard"
 	Driver		"kbd"
 	Option		"Device" "/dev/input/event0"
+EndSection
+
+Section "InputDevice"
+	Identifier	"System Mouse"
+	Driver		"mouse"
+	Option		"Device" "/dev/input/event1"
 EndSection
 
 Section "Device"
