xilinx-zynqmp: template three BSP specific packages for graphics
RallyID: US112355

This patch is to whitelist Mali400 kernel module, libmali-xlnx, and armsoc for
zynqmp in, and append them into *.inc with can-utils, alsa-utils.

Signed-off-by: Zumeng Chen <zumeng.chen@windriver.com>

--- a/templates/default/bsp-pkgs.conf
+++ b/templates/default/bsp-pkgs.conf
@@ -3,3 +3,6 @@
 
 PNWHITELIST_openembedded-layer += 'libsocketcan'
 PNWHITELIST_openembedded-layer += 'can-utils'
+PNWHITELIST_wr-xilinx-zynqmp += 'kernel-module-mali'
+PNWHITELIST_wr-xilinx-zynqmp += 'xf86-video-armsoc'
+# PNWHITELIST_wr-xilinx-zynqmp += 'libmali-xlnx'
