--- a/conf/machine/xilinx-zynqmp.conf
+++ b/conf/machine/xilinx-zynqmp.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: xilinx-zynqmp
-#@DESCRIPTION: Machine configuration for running a xilinx-zynqmp
+#@DESCRIPTION: Machine configuration for Zynq Ultrascale+ MPSoC
 
 require xilinx-zynqmp.inc
 EXTRA_IMAGECMD_jffs2 = "--pad --no-cleanmarkers --eraseblock=128"
