--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -27,3 +27,5 @@ PREMIRRORS_append = " \
      .*://.*/.* file://${LAYERDIR}/downloads/ \n \
      git://.*/.* git://${LAYERDIR}/git/MIRRORNAME;protocol=file \n \
 "
+
+LAYERSERIES_COMPAT_wr-xilinx-zynqmp = "rocko wrl"
