--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,23 +9,14 @@ BBPATH =. "${LAYERDIR}:"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-
 BBFILE_COLLECTIONS += "wr-xilinx-zynqmp"
 BBFILE_PATTERN_wr-xilinx-zynqmp := "^${LAYERDIR}/"
 BBFILE_PRIORITY_wr-xilinx-zynqmp = "7"
-
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_wr-xilinx-zynqmp = "1"
 
 LAYERDEPENDS_wr-xilinx-zynqmp = "core wrlinux"
-
-# We have a pre-populated downloads directory, add to PREMIRRORS
-PREMIRRORS_append = " \
-     .*://.*/.* file://${LAYERDIR}/downloads/ \n \
-     git://.*/.* git://${LAYERDIR}/git/MIRRORNAME;protocol=file \n \
-"
-
-LAYERSERIES_COMPAT_wr-xilinx-zynqmp = "rocko wrl"
+LAYERRECOMMENDS_wr-xilinx-zynqmp = "xilinx-zynqmp-dl"
+LAYERSERIES_COMPAT_wr-xilinx-zynqmp = "thud wrl"
