--- a/recipes-graphics/xorg-xserver/xserver-xf86-config/xilinx-zynqmp/xorg.conf
+++ b/recipes-graphics/xorg-xserver/xserver-xf86-config/xilinx-zynqmp/xorg.conf
@@ -23,5 +23,9 @@ EndSection
 Section "Screen"
         Identifier      "DefaultScreen"
         Device          "ZynqMP"
-        DefaultDepth    16
+	DefaultDepth    24
+	SubSection "Display"
+		Depth    24
+		Modes    "1920x1080" "1024x768" "800x600"
+	EndSubSection
 EndSection
