xilinx-zynqmp: rename layer name to "wr-*"
Issue: LINUXPG-77

If the layer name is the same as bsp-layer name "xilinx-zynqmp", then
PNWHITELIST_xilinx-zynqmp = "xxx" will corrupt all PNWHITELIST variables.
So change layer name to "wr-xilinx-zynqmp".

Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,16 +10,16 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
 
-BBFILE_COLLECTIONS += "xilinx-zynqmp"
-BBFILE_PATTERN_xilinx-zynqmp := "^${LAYERDIR}/"
-BBFILE_PRIORITY_xilinx-zynqmp = "7"
+BBFILE_COLLECTIONS += "wr-xilinx-zynqmp"
+BBFILE_PATTERN_wr-xilinx-zynqmp := "^${LAYERDIR}/"
+BBFILE_PRIORITY_wr-xilinx-zynqmp = "7"
 
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
-LAYERVERSION_xilinx-zynqmp = "1"
+LAYERVERSION_wr-xilinx-zynqmp = "1"
 
-LAYERDEPENDS_xilinx-zynqmp = "core wrlinux"
-LAYERSERIES_COMPAT_xilinx-zynqmp = "thud wrl warrior"
+LAYERDEPENDS_wr-xilinx-zynqmp = "core wrlinux"
+LAYERSERIES_COMPAT_wr-xilinx-zynqmp = "thud wrl warrior"
 
 # We have a pre-populated downloads directory, add to PREMIRRORS
 PREMIRRORS_append = " \
