--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,6 +5,8 @@
 # We have a conf and classes directory, add to BBPATH
 BBPATH =. "${LAYERDIR}:"
 
+LAYERRECOMMENDS_wr-xilinx-zynqmp  = "xilinx-zynqmp-dl"
+
 # We have a packages directory, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
