conf/layer.conf: Add zeus to LAYERSERIES_COMPAT
Issue: LINUXEXEC-3509

(LOCAL REV: NOT UPSTREAM) -- Pending

This commit is automatically generated by autorebase

Signed-off-by: Hongxu Jia <hongxu.jia@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -21,7 +21,7 @@ BBFILE_PRIORITY_wr-xilinx-zynqmp = "7"
 LAYERVERSION_wr-xilinx-zynqmp = "1"
 
 LAYERDEPENDS_wr-xilinx-zynqmp = "core wrlinux"
-LAYERSERIES_COMPAT_wr-xilinx-zynqmp = "thud wrl warrior"
+LAYERSERIES_COMPAT_wr-xilinx-zynqmp = "thud wrl warrior zeus"
 
 # We have a pre-populated downloads directory, add to PREMIRRORS
 PREMIRRORS_append = " \
