xilinx-zynqmp: add can-utils package to xilinx-zynqmp
Issue: LIN1019-2977

Add can-utils package to bsp xilinx-zynqmp since the zcu102
board has CAN feature.

Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/templates/default/bsp-pkgs.conf
+++ b/templates/default/bsp-pkgs.conf
@@ -1,2 +1,4 @@
 PNWHITELIST_wr-xilinx-zynqmp += 'xf86-video-armsoc'
 PNWHITELIST_wr-xilinx-zynqmp += 'kernel-module-mali'
+PNWHITELIST_openembedded-layer += 'libsocketcan'
+PNWHITELIST_openembedded-layer += 'can-utils'
