xilinx-zynqmp: add device-tree support for xilinx-zynqmp
Issue: LINUXEXEC-8268

The modifications are as below:
1. add device-tree.bbappend to copy dts/dtsi files from wrlinux kernel tree.
This step is to make sure that xsct will use these wrlinux dts/dtsi files
to create dynamically dtbs which will used by wrlinux kernel.
2. add the discription of building device-tree in README.hardware.

Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,6 +12,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
 
+HDF_MACHINE_xilinx-zynqmp ?= "zcu102-zynqmp"
 BBFILE_COLLECTIONS += "wr-xilinx-zynqmp"
 BBFILE_PATTERN_wr-xilinx-zynqmp := "^${LAYERDIR}/"
 BBFILE_PRIORITY_wr-xilinx-zynqmp = "7"
@@ -20,7 +21,7 @@ BBFILE_PRIORITY_wr-xilinx-zynqmp = "7"
 # cause compatibility issues with other layers
 LAYERVERSION_wr-xilinx-zynqmp = "1"
 
-LAYERDEPENDS_wr-xilinx-zynqmp = "core wrlinux"
+LAYERDEPENDS_wr-xilinx-zynqmp = "core wrlinux xilinx-tools xilinx"
 LAYERSERIES_COMPAT_wr-xilinx-zynqmp = "wrl dunfell gatesgarth"
 
 # We have a pre-populated downloads directory, add to PREMIRRORS
