--- a/templates/default/bsp-pkgs.conf
+++ b/templates/default/bsp-pkgs.conf
@@ -2,3 +2,6 @@ PNWHITELIST_wr-xilinx-zynqmp += 'xf86-video-armsoc'
 PNWHITELIST_wr-xilinx-zynqmp += 'kernel-module-mali'
 PNWHITELIST_openembedded-layer += 'libsocketcan'
 PNWHITELIST_openembedded-layer += 'can-utils'
+PNWHITELIST_xilinx += 'device-tree'
+PNWHITELIST_xilinx += 'python3-dtc'
+PNWHITELIST_xilinx-tools += 'external-hdf'
