xilinx-zynqmp: add a prominent customer warning
Issue: LIN1019-4856

The IP section requires that there is a prominent customer warning provided
regarding the external component download and additional third party licensing
involved.

Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -28,3 +28,4 @@ PREMIRRORS_append = " \
      .*://.*/.* file://${LAYERDIR}/downloads/ \n \
      git://.*/.* git://${LAYERDIR}/git/MIRRORNAME;protocol=file \n \
 "
+BANNER[xilinx-zynqmp_default] = "The xilinx-zynqmp layer includes third party components, where additional third party licenses may apply."
