layer.conf: update LAYERSERIES_COMPAT with hardknott
Issue: LINUXEXEC-12571

This commit is generated by autorebase automatically.

Signed-off-by: Chen Qi <Qi.Chen@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -22,7 +22,7 @@ BBFILE_PRIORITY_wr-xilinx-zynqmp = "7"
 LAYERVERSION_wr-xilinx-zynqmp = "1"
 
 LAYERDEPENDS_wr-xilinx-zynqmp = "core wrlinux xilinx-tools xilinx"
-LAYERSERIES_COMPAT_wr-xilinx-zynqmp = "wrl dunfell gatesgarth"
+LAYERSERIES_COMPAT_wr-xilinx-zynqmp = "wrl hardknott"
 
 # We have a pre-populated downloads directory, add to PREMIRRORS
 PREMIRRORS_append = " \
