--- a/zynqmp-secure-boot/conf/layer.conf
+++ b/zynqmp-secure-boot/conf/layer.conf
@@ -23,6 +23,7 @@ Please ensure that you are aware of what your risk to use these keys in your own
 # Warn the user if sample key is used
 BANNER[xilinx-zynqmp_default] = "${INSECURE_KEY_MSG}"
 
-LAYERSERIES_COMPAT_zynqmp-secure-layer = "wrl warrior zeus"
+LAYERDEPENDS_zynqmp-secure-layer = "core wrlinux xilinx-tools xilinx"
+LAYERSERIES_COMPAT_zynqmp-secure-layer = "wrl hardknott"
 
 LAYER_PATH_zynqmp-secure-layer = "${LAYERDIR}"
